<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.timematters.activities.NewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_activities"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_when"
            android:textAlignment="center"
            android:textSize="40dp" />

        <DatePicker
            android:id="@+id/datePickerNewActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_hours"
            android:textAlignment="center"
            android:textSize="40dp" />

        <TimePicker
            android:id="@+id/timePickerTotalTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layoutMode="clipBounds"
            android:timePickerMode="spinner" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/text_note"
            android:textAlignment="center"
            android:textSize="40dp" />

        <EditText
            android:id="@+id/txt_new_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/hint_note"
            android:inputType="textShortMessage"
            android:maxLines="1"
            android:maxEms="100"
            android:maxLength="100" />

        <Button
            android:id="@+id/btn_save_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:onClick="onClickUpperButtons"
            android:text="@string/text_save" />

    </LinearLayout>
</ScrollView>