<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/drawer_layout"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/background_activities">
    tools:context=".MainActivity">



    <!-- As the main content view, the views below consumes the entire
     space available using match_parent in both dimensions. -->

    <FrameLayout android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_activities"
        android:visibility="gone"/>

    <FrameLayout android:id="@+id/container_layout_idle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_activities"
        android:visibility="gone">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txt_tap_to_start"
            android:id="@+id/btn_tap_to_start"
            android:layout_gravity="center"
            android:background="@color/background_activities"
            android:clickable="true"
            android:onClick="onClickUpperButtons"
            android:textStyle="bold"
            android:textSize="@dimen/abc_action_button_min_width_overflow_material" />
    </FrameLayout>

    <FrameLayout android:id="@+id/container_layout_blocked"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_activities"
        android:visibility="gone">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txt_tap_to_resume"
            android:id="@+id/btn_tap_to_resume"
            android:layout_gravity="center"
            android:background="@color/background_activities"
            android:clickable="true"
            android:onClick="onClickUpperButtons"
            android:textStyle="bold"
            android:textSize="@dimen/abc_action_button_min_width_overflow_material" />
    </FrameLayout>

    <FrameLayout android:id="@+id/container_layout_running"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/background_activities">
        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_time_title"
                android:text="@string/text_elapsed_time"
                android:textAlignment="center"
                android:textSize="40dp"
                android:gravity="center" />
            <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_time"
                android:textAlignment="center"
                android:textSize="40dp"
                android:gravity="center" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:showDividers="beginning|middle|end"
            android:gravity="center"
            android:layout_gravity="center_horizontal|bottom">
            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_pause"
                android:id="@+id/btn_pause"
                android:width="150dp"
                android:background="@android:color/holo_green_light"
                android:onClick="onClickUpperButtons" />
            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_stop"
                android:id="@+id/btn_stop"
                android:width="150dp"
                android:background="@android:color/holo_red_light"
                android:onClick="onClickUpperButtons" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/container_layout_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/background_activities">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView2"
            android:layout_gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:orientation="vertical">
                <TextView android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/text_from"
                    android:textSize="40dp"
                    android:gravity="center" />
                <DatePicker
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/datePickerSearchFrom"
                    android:layout_centerHorizontal="true"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner" />
                <TextView android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/text_to"
                    android:textSize="40dp"
                    android:gravity="center" />
                <DatePicker
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/datePickerSearchUntil"
                    android:layout_centerHorizontal="true"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner" />
                <Button android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_search"
                    android:id="@+id/btn_search"
                    android:background="@android:color/holo_green_light"
                    android:onClick="onClickUpperButtons" />
            </LinearLayout>
        </ScrollView>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/container_layout_about"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/background_activities">
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal|center_vertical"
            android:layout_margin="4dp"
            android:background="@color/background_activities">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_thanks_1"
                android:textSize="40dp"
                android:layout_gravity="center" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_thanks_2"
                android:textSize="40dp"
                android:layout_gravity="center" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="40dp"
                    android:text="@string/app_name" />
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="40dp"
                    android:text="@string/text_space"/>
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="40dp"
                    android:text="@string/app_version" />
            </LinearLayout>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/msg_thanks_3" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout android:id="@+id/container_layout_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:layout_margin="4dp"
        android:background="@color/background_activities">

        <LinearLayout android:orientation="vertical"
            android:id="@+id/lst_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/text_total_hours"
                    android:id="@+id/textView"
                    android:gravity="center_horizontal" />
                <TextView android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="40dp"
                    android:id="@+id/txt_hours"
                    android:gravity="center_horizontal" />
            </LinearLayout>
            <ListView android:id="@+id/lstJobs"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:visibility="gone"
                android:dividerHeight="4dp"
                android:footerDividersEnabled="true"
                android:headerDividersEnabled="true"/>
        </LinearLayout>
        <TextView android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="match_parent"
            android:textSize="40dp"
            android:text="@string/text_empty"
            android:id="@+id/txt_empty"
            android:gravity="center_vertical|center_horizontal" />

        <LinearLayout
            android:id="@+id/undobar"
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_vertical|center_horizontal"
            android:layout_margin="10dp"
            android:layout_marginRight="100dp"
            android:alpha="100"
            android:baselineAligned="false"
            android:background="@color/background_undo"
            android:dividerPadding="10dp"
            android:gravity="left|center"
            android:padding="4dp" >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_vertical" >
                <TextView
                    android:id="@+id/txtSumDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right|center_vertical" >
                <Button
                    android:id="@+id/undobar_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/background_undo"
                    android:drawableLeft="@android:drawable/ic_menu_revert"
                    android:onClick="undoDelection"
                    android:text="undo"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#fff" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <!-- android:layout_gravity="start" tells DrawerLayout to treat
     this as a sliding drawer on the left side for left-to-right
     languages and on the right side for right-to-left languages.
     If you're not building against API 17 or higher, use
     android:layout_gravity="left" instead. -->
    <!-- The drawer is given a fixed width in dp and extends the full height of
         the container. -->
    <fragment android:id="@+id/navigation_drawer"
        android:layout_width="@dimen/navigation_drawer_width" android:layout_height="match_parent"
        android:layout_gravity="start" android:name="org.timematters.activities.NavigationDrawerFragment"
        tools:layout="@layout/fragment_navigation_drawer" />

</android.support.v4.widget.DrawerLayout>
